--- a/coops/Titans_stronghold.tex
+++ b/coops/Titans_stronghold.tex
@@ -53,7 +53,7 @@ The center of this tile is the Titans' Stronghold.
 
 \subsection*{\MakeUppercase{Win conditions}}
 
-\textbf{Win:} Kill all unit in the Titans' Stronghold (the center of tile VI-VII next to the tiles I)
+\textbf{Win:} Kill all units in the Titans' Stronghold (the center of tile VI-VII next to the tiles I).
 
 \subsection*{\MakeUppercase{Timed Events}}
 
