--- a/coops/Titans_stronghold.tex
+++ b/coops/Titans_stronghold.tex
@@ -51,7 +51,7 @@ Take the following Map Tiles and set them up as shown in the scenario map layout
 If you don't have enough VI-VII tiles, you can use another tile near to tile I.
 The center of this tile is the Titans' Stronghold.
 
-\subsection*{\MakeUppercase{Win conditions}}
+\subsection*{\MakeUppercase{Win Conditions}}
 
 \textbf{Win:} Kill all units in the Titans' Stronghold (the center of tile VI-VII next to the tiles I).
 
