--- a/coops/Titans_stronghold.tex
+++ b/coops/Titans_stronghold.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = en_US
-\addscenariosection{1}{Cooperative scenario}{Titans' stronghold}{\images/Stronghold.png}
+\addscenariosection{1}{Cooperative scenario}{Titans' Stronghold}{\images/earthquake.png}
 
 \begin{multicols*}{2}
 
