--- a/coops/titans_stronghold.tex
+++ b/coops/titans_stronghold.tex
@@ -27,8 +27,10 @@ This scenario plays out over 16 rounds (15 in Impossible difficulty).
 \textbf{Starting Income:} 10 \svg{gold}, 2 \svg{building_materials}, 1 \svg{valuables}
 
 \textbf{Starting Units:} 
-    A Pack of \svg{bronze} units of your choice.
-    A Few \svg{bronze} units of your choice.
+\begin{itemize}
+  \item A Pack of \svg{bronze} units of your choice.
+  \item A Few \svg{bronze} units of your choice.
+\end{itemize}
 
 \textbf{Town Buildings:} None
 
