--- a/clash/bloody_grail.tex
+++ b/clash/bloody_grail.tex
@@ -66,17 +66,17 @@ During this scenario:
             \item \textbf{[3rd Obelisk]} You gain a Secondary Hero. Place their model on this field. Then, choose one enemy player to discard 2 random cards from their hand.
             \item \textbf{[4th Obelisk]} Remove up to 4 cards from your hand; then, search each corresponding deck for a card of your choice, and put it in your hand.
         \end{enumerate}
-        \item \textbf{[Sacrifice]} Remove a faction Unit card from your Unit deck in exchange for:
+        \item \textbf{[Sacrifice]} Remove a * faction Unit card from your Unit deck in exchange for:
         \begin{enumerate}
-            \item \svg{bronze}: Gain 6 \svg{gold}, 3 \svg{building_materials}, and 1 \svg{valuables}. Additionally, if the Unit Card was on the Pack side, \textbf{Search (4)} the Minor Artifact deck.
-            \item \svg{silver}: Gain 12 \svg{gold}, 6 \svg{building_materials}, and 2 \svg{valuables}. Additionally, if the Unit Card was on the Pack side, \textbf{Search (3)} the Major Artifact deck.
-            \item \svg{golden}: Gain 18 \svg{gold}, 9 \svg{building_materials}, and 3 \svg{valuables}. Additionally, \textbf{Search (2)} the Relic card deck. Finally, if the Unit Card was on the Pack side, \textbf{Search (2)} the \svg{azure} Unit deck; you may Recruit one of these Units for half the cost (rounded down).
+            \item *\svg{bronze}: Gain 6 \svg{gold}, 3 \svg{building_materials}, and 1 \svg{valuables}. Additionally, if the Unit card was on the Pack side, \textbf{Search (4)} the Minor Artifact deck.
+            \item *\svg{silver}: Gain 12 \svg{gold}, 6 \svg{building_materials}, and 2 \svg{valuables}. Additionally, if the Unit card was on the Pack side, \textbf{Search (3)} the Major Artifact deck.
+            \item *\svg{golden}: Gain 18 \svg{gold}, 9 \svg{building_materials}, and 3 \svg{valuables}. Additionally, \textbf{Search (2)} the Relic card deck. Finally, if the Unit card was on the Pack side, \textbf{Search (2)} the \svg{azure} Unit deck; you may Recruit one of these Units for half the cost (rounded down).
         \end{enumerate}
     \end{enumerate}
     \item A player that chooses \textbf{Sacrifice} at an Obelisk gains the title of “\textcolor{darkcandyapplered}{Blood Knight}.” Place a red faction cube on their Hero portrait to mark this effect. A \textcolor{darkcandyapplered}{Blood Knight} may never choose the \textbf{Cleanse} option when Visiting an Obelisk.
     \item A player that chooses \textbf{Cleanse} at an Obelisk gains the title of “\textcolor{cyan}{Grail Knight}.” Place a blue faction cube on their Hero portrait to mark this effect. A \textcolor{cyan}{Grail Knight} may never choose the \textbf{Sacrifice} option when Visiting an Obelisk.
     \item When a player chooses \textbf{Sacrifice} at an Obelisk, place a number of faction cubes on the sacrificed Unit card and on the Obelisk field equivalent to the number of times the player has chosen the \textbf{Sacrifice} option. For example, if the player is sacrificing for the second time, place 2 faction cubes on the Unit card and 2 faction cubes on the Obelisk field.
-    \item A player who possesses the title of “A \textcolor{cyan}{Grail Knight}” may, after Visiting an Obelisk, recruit an enemy Unit sacrificed at that Obelisk for half the cost (rounded down); if a Pack was sacrificed, the player may choose to recruit Few instead.
+    \item A player who possesses the title of “\textcolor{cyan}{Grail Knight}” may, after Visiting an Obelisk, recruit an enemy Unit sacrificed at that Obelisk for half the cost (rounded down); if a Pack was sacrificed, the player may choose to recruit Few instead.
     \item If a Unit recruited at an Obelisk is defeated, Remove it.
     \item A player who possesses no title or the title of “\textcolor{darkcandyapplered}{Blood Knight}” may not use the Diplomacy Ability card. If a player who possesses no title or the title of “\textcolor{darkcandyapplered}{Blood Knight}” draws the Diplomacy Ability card, they may show it to the other players, then discard it and draw a new Ability card in its stead.
     \item A player who possesses the title of “\textcolor{cyan}{Grail Knight}” may not use the Diplomacy Ability card to Recruit Neutral Azure Units.
@@ -98,6 +98,7 @@ During this scenario:
 To win the scenario, a Hero must obtain the Grail token and bring it to their faction Town.
 \subsection*{\MakeUppercase{Round Tracker}}
 If the Grail is not obtained at least once by the end of the 13th round, the game ends, and all players lose the scenario.
+
 If the Grail token has been obtained, the players gain additional time – until the end of the 16th round – to bring the Grail to their faction Town. Otherwise, all players lose the scenario.
 \subsection*{\MakeUppercase{Timed Event}}
 At the beginning of the 6th, 9th, and 12th rounds, remove all Black cubes from all Water Wheels and Windmills on the map. Additionally, all players possessing the title of “\textcolor{cyan}{Grail Knight}” gain \svg{morale_positive}. Finally, any players who do not possess a title gain 2 \svg{morale_negative}.
