Make blood red in damage glyph

--- a/clash/bloody_grail.tex
+++ b/clash/bloody_grail.tex
@@ -90,9 +90,9 @@ During this scenario:
     \item If a Hero with the Grail token Surrenders, the Grail token is placed on the hex where the Hero Surrendered.
     \item If a Neutral army defeats the Hero with the Grail token, the Grail token is placed on the field where the Hero was defeated.
     \item If a Hero with the Grail token casts Town Portal or uses the Inferno faction Castle Gate building, the Grail token is placed on the hex where the spell was cast or the building used.
-    \item The Grail token behaves like a Permanent card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: “$\infty$ Once during each Combat, if the Hero is a \textcolor{darkcandyapplered}{Blood Knight}, discard a card to remove up to 2 \svg{damage} from your units and assign it to enemy units.”
+    \item The Grail token behaves like a Permanent card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: “$\infty$ Once during each Combat, if the Hero is a \textcolor{darkcandyapplered}{Blood Knight}, discard a card to remove up to 2 \svg{damage-red} from your units and assign it to enemy units.”
     \item A Hero with the Grail token who possesses the title of “\textcolor{cyan}{Grail Knight}” may pay 10 \svg{gold} or 3 \svg{valuables} at any Temple map location to cleanse the Grail. Place a blue faction cube on the Grail token to mark this effect.
-    \item Once cleansed, the Grail token behaves like a Permanent card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: “$\infty$ Once during each Combat round, if the Hero is a \textcolor{cyan}{Grail Knight}, discard a card to remove up to 2 \svg{damage} from your units.”
+    \item Once cleansed, the Grail token behaves like a Permanent card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: “$\infty$ Once during each Combat round, if the Hero is a \textcolor{cyan}{Grail Knight}, discard a card to remove up to 2 \svg{damage-red} from your units.”
 \end{itemize}
 \subsection*{\MakeUppercase{Victory Condition}}
 To win the scenario, a Hero must obtain the Grail token and bring it to their faction Town.
