--- a/clash/bloody_grail.tex
+++ b/clash/bloody_grail.tex
@@ -8,10 +8,13 @@
 \textbf{Source:} \href{https://discord.com/channels/740870068178649108/1239631918643941509}{Archon Studios Discord}
 
 \textit{A Lady clad in dark robes visits you in your dreams, offering you a golden chalice full of blood-red wine. Waking up in a cold sweat, you decide to embark on a quest to find this unholy artifact.}
+
 \subsection*{\MakeUppercase{Player Count}}
 A scenario for 2 or 4 players.
+
 \subsection*{\MakeUppercase{Scenario Length}}
 This scenario plays out over 13 rounds.
+
 \subsection*{\MakeUppercase{Map Setup}}
 Take the following Map tiles and set them up as shown in the scenario map layout:
 
@@ -30,32 +33,43 @@ Take the following Map tiles and set them up as shown in the scenario map layout
     \item 8 × Far (II-III) Map tile, 4 of which must contain a Settlement – each player gets 2 of these tiles, 1 of which must contain a Settlement
     \item 1 × Center (VI-VII) Map tile, which must contain the Grail field
 \end{itemize}
+
 \textbf{\MakeUppercase{Note:}} Before placing the Near tiles, separate them into 2 piles (with and without an Obelisk). Put them alternately, so that the tiles with an Obelisk are not placed adjacent to each other.
+
 \subsection*{\MakeUppercase{Starting Resources}}
 Each player starts with the following resources:
 
 {\centering\hfill \textbf{13 ×} \svg{gold} \hfill \textbf{2 ×} \svg{building_materials} \hfill \textbf{1 ×} \svg{valuables}\hfill}
+
 \subsection*{\MakeUppercase{Setting a Player's\\Income}}
 Set the income on the income tracker to:
 
-{\centering\hfill\textbf{“10”} \svg{gold} \hfill \textbf{“0”} \svg{building_materials} \hfill \textbf{“0”} \svg{valuables}\hfill}
+{\centering\hfill\textbf{``10''} \svg{gold} \hfill \textbf{``0''} \svg{building_materials} \hfill \textbf{``0''} \svg{valuables}\hfill}
+
 \subsection*{\MakeUppercase{Starting Buildings}}
 Each player starts the game with these buildings:
+
 \begin{itemize}
     \item \svg{bronze} Dwelling
 \end{itemize}
+
 \subsection*{\MakeUppercase{Starting Units}}
 Each player starts with the following units:
+
 \begin{itemize}
     \item 1 × A few \svg{bronze} units with the highest Recruitment cost
     \item 1 × A pack of \svg{bronze} units with the lowest Recruitment cost
 \end{itemize}
+
 \subsection*{\MakeUppercase{Additional Scenario\\Rules}}
 Before this scenario:
+
 \begin{itemize}
     \item Split the Artifact deck by rarity into 3 separate decks (Minor, Major, and Relic). A player may gain only Minor Artifacts on Starting or Far tiles, Minor or Major Artifacts on Near tiles, and Major or Relic Artifacts on Center tiles.
 \end{itemize}
+
 During this scenario:
+
 \begin{itemize}
     \item When a player Visits an Obelisk, they must resolve one of the following effects:
     \begin{enumerate}[leftmargin=15pt]
@@ -73,35 +87,38 @@ During this scenario:
             \item *\svg{golden}: Gain 18 \svg{gold}, 9 \svg{building_materials}, and 3 \svg{valuables}. Additionally, \textbf{Search (2)} the Relic card deck. Finally, if the Unit card was on the Pack side, \textbf{Search (2)} the \svg{azure} Unit deck; you may Recruit one of these Units for half the cost (rounded down).
         \end{enumerate}
     \end{enumerate}
-    \item A player that chooses \textbf{Sacrifice} at an Obelisk gains the title of “\textcolor{darkcandyapplered}{Blood Knight}.” Place a red faction cube on their Hero portrait to mark this effect. A \textcolor{darkcandyapplered}{Blood Knight} may never choose the \textbf{Cleanse} option when Visiting an Obelisk.
-    \item A player that chooses \textbf{Cleanse} at an Obelisk gains the title of “\textcolor{airforceblue}{Grail Knight}.” Place a blue faction cube on their Hero portrait to mark this effect. A \textcolor{airforceblue}{Grail Knight} may never choose the \textbf{Sacrifice} option when Visiting an Obelisk.
+    \item A player that chooses \textbf{Sacrifice} at an Obelisk gains the title of ``\textcolor{darkcandyapplered}{Blood Knight}.'' Place a red faction cube on their Hero portrait to mark this effect. A \textcolor{darkcandyapplered}{Blood Knight} may never choose the \textbf{Cleanse} option when Visiting an Obelisk.
+    \item A player that chooses \textbf{Cleanse} at an Obelisk gains the title of ``\textcolor{darkcerulean}{Grail Knight}.'' Place a blue faction cube on their Hero portrait to mark this effect. A \textcolor{darkcerulean}{Grail Knight} may never choose the \textbf{Sacrifice} option when Visiting an Obelisk.
     \item When a player chooses \textbf{Sacrifice} at an Obelisk, place a number of faction cubes on the sacrificed Unit card and on the Obelisk field equivalent to the number of times the player has chosen the \textbf{Sacrifice} option. For example, if the player is sacrificing for the second time, place 2 faction cubes on the Unit card and 2 faction cubes on the Obelisk field.
-    \item A player who possesses the title of “\textcolor{airforceblue}{Grail Knight}” may, after Visiting an Obelisk, recruit an enemy Unit sacrificed at that Obelisk for half the cost (rounded down); if a Pack was sacrificed, the player may choose to recruit Few instead.
+    \item A player who possesses the title of ``\textcolor{darkcerulean}{Grail Knight}'' may, after Visiting an Obelisk, recruit an enemy Unit sacrificed at that Obelisk for half the cost (rounded down); if a Pack was sacrificed, the player may choose to recruit Few instead.
     \item If a Unit recruited at an Obelisk is defeated, Remove it.
-    \item A player who possesses no title or the title of “\textcolor{darkcandyapplered}{Blood Knight}” may not use the Diplomacy Ability card. If a player who possesses no title or the title of “\textcolor{darkcandyapplered}{Blood Knight}” draws the Diplomacy Ability card, they may show it to the other players, then discard it and draw a new Ability card in its stead.
-    \item A player who possesses the title of “\textcolor{airforceblue}{Grail Knight}” may not use the Diplomacy Ability card to Recruit Neutral Azure Units.
+    \item A player who possesses no title or the title of ``\textcolor{darkcandyapplered}{Blood Knight}'' may not use the Diplomacy Ability card. If a player who possesses no title or the title of ``\textcolor{darkcandyapplered}{Blood Knight}'' draws the Diplomacy Ability card, they may show it to the other players, then discard it and draw a new Ability card in its stead.
+    \item A player who possesses the title of ``\textcolor{darkcerulean}{Grail Knight}'' may not use the Diplomacy Ability card to Recruit Neutral Azure Units.
     \item Whenever an Astrologers Proclaim or Event card that allows you to Recruit Neutral Units is drawn, ignore it, and draw a new Astrologers Proclaim or Event card.
     \item Players can use their Deck of Might \& Magic when paying gold to defend their faction Town.
     \item Ignore Combat encounters on the field with the Grail.
     \item Players may not Visit the field with the Grail token unless they have already Visited at least two Obelisks or the Grail token has been taken by any Hero at least once.
     \item To obtain the Grail token, a player’s Hero must spend 2 MPs on the field with the Grail.
-    \item If a player does not possess the title of “\textcolor{darkcandyapplered}{Blood Knight},” they must Remove a faction Unit card from their Unit deck immediately after obtaining the Grail token. This effect can only occur once per player.
+    \item If a player does not possess the title of ``\textcolor{darkcandyapplered}{Blood Knight},'' they must Remove a faction Unit card from their Unit deck immediately after obtaining the Grail token. This effect can only occur once per player.
     \item If another Hero defeats the Hero with the Grail token, they also take the Grail token.
     \item If a Hero with the Grail token Surrenders, the Grail token is placed on the hex where the Hero Surrendered.
     \item If a Neutral army defeats the Hero with the Grail token, the Grail token is placed on the field where the Hero was defeated.
     \item If a Hero with the Grail token casts Town Portal or uses the Inferno faction Castle Gate building, the Grail token is placed on the hex where the spell was cast or the building used.
-    \item The Grail token behaves like a Permanent card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: “$\infty$ Once during each Combat, if the Hero is a \textcolor{darkcandyapplered}{Blood Knight}, discard a card to remove up to 2 \svg{damage-red} from your units and assign it to enemy units.”
-    \item A Hero with the Grail token who possesses the title of “\textcolor{airforceblue}{Grail Knight}” may pay 10 \svg{gold} or 3 \svg{valuables} at any Temple map location to cleanse the Grail. Place a blue faction cube on the Grail token to mark this effect.
-    \item Once cleansed, the Grail token behaves like a Permanent card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: “$\infty$ Once during each Combat round, if the Hero is a \textcolor{airforceblue}{Grail Knight}, discard a card to remove up to 2 \svg{damage-red} from your units.”
+    \item The Grail token behaves like a Permanent card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: ``$\infty$ Once during each Combat, if the Hero is a \textcolor{darkcandyapplered}{Blood Knight}, discard a card to remove up to 2 \svg{damage-red} from your units and assign it to enemy units.''
+    \item A Hero with the Grail token who possesses the title of ``\textcolor{darkcerulean}{Grail Knight}'' may pay 10 \svg{gold} or 3 \svg{valuables} at any Temple map location to cleanse the Grail. Place a blue faction cube on the Grail token to mark this effect.
+    \item Once cleansed, the Grail token behaves like a Permanent card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: ``$\infty$ Once during each Combat round, if the Hero is a \textcolor{darkcerulean}{Grail Knight}, discard a card to remove up to 2 \svg{damage-red} from your units.''
 \end{itemize}
+
 \subsection*{\MakeUppercase{Victory Condition}}
 To win the scenario, a Hero must obtain the Grail token and bring it to their faction Town.
+
 \subsection*{\MakeUppercase{Round Tracker}}
 If the Grail is not obtained at least once by the end of the 13th round, the game ends, and all players lose the scenario.
 
 If the Grail token has been obtained, the players gain additional time – until the end of the 16th round – to bring the Grail to their faction Town. Otherwise, all players lose the scenario.
+
 \subsection*{\MakeUppercase{Timed Event}}
-At the beginning of the 6th, 9th, and 12th rounds, remove all Black cubes from all Water Wheels and Windmills on the map. Additionally, all players possessing the title of “\textcolor{airforceblue}{Grail Knight}” gain \svg{morale_positive}. Finally, any players who do not possess a title gain 2 \svg{morale_negative}.
+At the beginning of the 6th, 9th, and 12th rounds, remove all Black cubes from all Water Wheels and Windmills on the map. Additionally, all players possessing the title of ``\textcolor{darkcerulean}{Grail Knight}'' gain \svg{morale_positive}. Finally, any players who do not possess a title gain 2 \svg{morale_negative}.
 \begin{tikzpicture}[overlay]
     \centering
     \node at (-3.5, -5) {\includegraphics[scale=0.45]{\_assets/maps/bloody-grail-2p.png}};
