Make scenario and template 2-columnar

--- a/coops/sentinels.tex
+++ b/coops/sentinels.tex
@@ -73,7 +73,7 @@ Take the following Map Tiles and set them up as shown in the scenario map layout
 \textbf{Lose:}
 \begin{itemize}
   \item There is an undefeated enemy army left at the end of Round 12.
-  \item One of your towns is captured or a main hero is defeated in battle 
+  \item One of your towns is captured or a main hero is defeated in battle
   (retreat doesn't count).
 \end{itemize}
 
@@ -93,7 +93,9 @@ Take the following Map Tiles and set them up as shown in the scenario map layout
 
 \newpage
 
-\subsection*{\MakeUppercase{Enemy Spawning and Movement}}
+\begin{multicols*}{2}
+
+\subsection*{\MakeUppercase{Enemy Spawning\\and Movement}}
 
 \begin{itemize}
   \item Enemy armies spawn on a random Obelisk field (use hero miniatures of factions not in play).
@@ -114,7 +116,7 @@ Take the following Map Tiles and set them up as shown in the scenario map layout
 \end{itemize}
 
 
-\subsection*{\MakeUppercase{Combat with Enemy Armies}}
+\subsection*{\MakeUppercase{Combat with\\Enemy Armies}}
 
 \begin{itemize}
   \item During a battle with an enemy army, a hero can retreat every time a friendly unit is about to activate.
@@ -132,6 +134,8 @@ Take the following Map Tiles and set them up as shown in the scenario map layout
   \item When a player retreats, the enemy army draws up to the ``minimum'' of 4 units and takes these as starting units to the next fight.
 \end{itemize}
 
+\end{multicols*}
+
 \hommtable[]{18}{
   \centering
   \medskip
@@ -144,25 +148,25 @@ Take the following Map Tiles and set them up as shown in the scenario map layout
   \newcommand{\azure}[0]{\svg[12]{azure}}
 
   \begin{tabularx}{\linewidth}{p{0.15\linewidth}XXXX} & \darkcell{Rounds 6 + 7} & \darkcell{Rounds 8 + 9} & \darkcell{Round 10}\\
-  \darkcell[1.4]{Easy} 
-    & \lightcell[1.4]{\bronze \silver \silver \silver \golden} 
-    & \lightcell[1.4]{\silver \silver \silver \golden \golden} 
-    & \lightcell[1.4]{\silver \silver \golden \azure \footref{azure} \linebreak 
+  \darkcell[1.4]{Easy}
+    & \lightcell[1.4]{\bronze \silver \silver \silver \golden}
+    & \lightcell[1.4]{\silver \silver \silver \golden \golden}
+    & \lightcell[1.4]{\silver \silver \golden \azure \footref{azure} \linebreak
       (2\bronze, 4\silver, 3\golden, 1\azure)}\\
-  \darkcell[1.4]{Normal} 
-    & \lightcell[1.4]{\silver \silver \silver \golden \golden} 
-    & \lightcell[1.4]{\silver \silver \silver \golden \azure} 
-    & \lightcell[1.4]{\golden \golden \golden \azure \footref{azure} \linebreak 
+  \darkcell[1.4]{Normal}
+    & \lightcell[1.4]{\silver \silver \silver \golden \golden}
+    & \lightcell[1.4]{\silver \silver \silver \golden \azure}
+    & \lightcell[1.4]{\golden \golden \golden \azure \footref{azure} \linebreak
       (2\silver, 7\golden, 1\azure)}\\
-  \darkcell[1.4]{Hard} 
-    & \lightcell[1.4]{\silver \silver \golden \golden \golden} 
+  \darkcell[1.4]{Hard}
+    & \lightcell[1.4]{\silver \silver \golden \golden \golden}
     & \lightcell[1.4]{\silver \silver \golden \golden \azure}
-    & \lightcell[1.4]{\golden \golden \azure \azure \footref{azure} \linebreak 
+    & \lightcell[1.4]{\golden \golden \azure \azure \footref{azure} \linebreak
       (2\silver, 6\golden, 2\azure)}\\
-  \darkcell[1.4]{Impossible} 
-    & \lightcell[1.4]{\silver \golden \golden \golden \golden} 
-    & \lightcell[1.4]{\golden \golden \golden \golden \azure} 
-    & \lightcell[1.4]{\golden \azure \azure \azure \footref{azure} \linebreak 
+  \darkcell[1.4]{Impossible}
+    & \lightcell[1.4]{\silver \golden \golden \golden \golden}
+    & \lightcell[1.4]{\golden \golden \golden \golden \azure}
+    & \lightcell[1.4]{\golden \azure \azure \azure \footref{azure} \linebreak
       (7\golden, 3\azure)}\\
   \end{tabularx}
 }
