--- a/templates/cooperative.tex
+++ b/templates/cooperative.tex
@@ -35,7 +35,7 @@ This scenario is played over ... rounds.
 
 \textbf{Map Tile Pool:} ...
 
-\textbf{Bonus:} Choose one of the following options: 
+\textbf{Bonus:} Choose one of the following options:
 
 \begin{itemize}
     \item ...
@@ -77,11 +77,15 @@ Take the following Map tiles and set them up as shown in the scenario map layout
 
 \newpage
 
+\begin{multicols*}{2}
+
 \subsection*{\MakeUppercase{Additional scenario rules}}
 
 \begin{itemize}
     \item ...
 \end{itemize}
+
+\end{multicols*}
 
 % Uncomment if you need a table to define unit strengths or other parameters of the game
 % \hommtable[]{12}{
@@ -96,10 +100,10 @@ Take the following Map tiles and set them up as shown in the scenario map layout
 %   \newcommand{\azure}[0]{\svg[12]{azure}}
 
 %   \begin{tabularx}{\linewidth}{p{0.15\linewidth}XXXX} & \darkcell{Column 1 name} & \darkcell{Column 2 name}\\
-%     \darkcell[1.4]{Row 1 name} 
+%     \darkcell[1.4]{Row 1 name}
 %         & \lightcell[1.4]{\bronze \silver \golden \azure}
 %         & \lightcell[1.4]{... other stuff ...} \\
-%         \darkcell[1.4]{Row 1 name} 
+%         \darkcell[1.4]{Row 1 name}
 %         & \lightcell[1.4]{\bronze \silver \golden \azure}
 %         & \lightcell[1.4]{... other stuff ...} \\
 %   \end{tabularx}
