More typos and formatting adjustments

--- a/clash/bloody_grail.tex
+++ b/clash/bloody_grail.tex
@@ -34,7 +34,7 @@ Take the following Map tiles and set them up as shown in the scenario map layout
     \item 1 × Center (VI-VII) Map tile, which must contain the Grail field
 \end{itemize}
 
-\textbf{\MakeUppercase{Note:}} Before placing the Near tiles, separate them into 2 piles (with and without an Obelisk). Put them alternately, so that the tiles with an Obelisk are not placed adjacent to each other.
+\textbf{\MakeUppercase{Note:}} Before placing the Near tiles, separate them into 2 piles (with and without an Obelisk). Place them alternately so that the tiles with an Obelisk are not placed adjacent to each other.
 
 \subsection*{\MakeUppercase{Starting Resources}}
 Each player starts with the following resources:
@@ -57,8 +57,8 @@ Each player starts the game with these buildings:
 Each player starts with the following units:
 
 \begin{itemize}
-    \item 1 × A few \svg{bronze} units with the highest Recruitment cost
-    \item 1 × A pack of \svg{bronze} units with the lowest Recruitment cost
+    \item A few \svg{bronze} units with the \textit{highest} Recruitment cost
+    \item A pack of \svg{bronze} units with the \textit{lowest} Recruitment cost
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Scenario\\Rules}}
@@ -71,14 +71,14 @@ Before this scenario:
 During this scenario:
 
 \begin{itemize}
-    \item When a player Visits an Obelisk, they must resolve one of the following effects:
+    \item When a player Visits an Obelisk, they \textit{must} resolve one of the following effects:
     \begin{enumerate}[leftmargin=15pt]
-        \item \textbf{[Cleanse]} The player receives one of the following boons, dependent on how many Obelisks they have Visited:
+        \item \textbf{[Cleanse]} The player receives one of the following boons, depending on how many Obelisks they have Visited:
         \begin{enumerate}
             \item \textbf{[1st Obelisk]} Roll 2 \svg{treasure} and choose 1 to resolve; then, gain \svg{morale_negative}.
             \item \textbf{[2nd Obelisk]} Increase your \svg{gold}, \svg{building_materials}, or \svg{valuables} income by 1 step.
-            \item \textbf{[3rd Obelisk]} You gain a Secondary Hero. Place their model on this field. Then, choose one enemy player to discard 2 random cards from their hand.
-            \item \textbf{[4th Obelisk]} Remove up to 4 cards from your hand; then, search each corresponding deck for a card of your choice, and put it in your hand.
+            \item \textbf{[3rd Obelisk]} You gain a Secondary Hero. Place their model on this field. If you already have a Secondary Hero, gain 3 \svg{gold} instead. Then, choose one enemy player to discard 2 random cards from their hand.
+            \item \textbf{[4th Obelisk]} Remove up to 4 cards from your hand, except Statistic cards; then, search each corresponding deck for a card of your choice and put it in your hand.
         \end{enumerate}
         \item \textbf{[Sacrifice]} Remove a * faction Unit card from your Unit deck in exchange for:
         \begin{enumerate}
@@ -109,10 +109,10 @@ During this scenario:
     \item Once cleansed, the Grail token behaves like a Permanent card that does not count towards your hand limit and cannot be discarded; it grants the following effect when played: ``$\infty$ Once during each Combat round, if the Hero is a \textcolor{darkcerulean}{Grail Knight}, discard a card to remove up to 2 \svg{damage-red} from your units.''
 \end{itemize}
 
-\subsection*{\MakeUppercase{Victory Condition}}
+\subsection*{\MakeUppercase{Victory Conditions}}
 To win the scenario, a Hero must obtain the Grail token and bring it to their faction Town.
 
-\subsection*{\MakeUppercase{Round Tracker}}
+\subsection*{\MakeUppercase{Defeat Conditions}}
 If the Grail is not obtained at least once by the end of the 13th round, the game ends, and all players lose the scenario.
 
 If the Grail token has been obtained, the players gain additional time – until the end of the 16th round – to bring the Grail to their faction Town. Otherwise, all players lose the scenario.
