--- a/metadata.tex
+++ b/metadata.tex
@@ -112,6 +112,8 @@
 \definecolor{cadmiumgreen}{rgb}{0.0, 0.42, 0.24}
 \definecolor{darkcandyapplered}{rgb}{0.64, 0.0, 0.0}
 \definecolor{goldenbrown}{rgb}{0.6, 0.4, 0.08}
+\definecolor{airforceblue}{rgb}{0.36, 0.54, 0.66}
+\definecolor{darkcerulean}{rgb}{0.03, 0.27, 0.49}
 
 % Command to frame images
 \newcommand\framedimage[2][]{%
@@ -395,6 +397,8 @@
 \clearpage
 
 \include{coops/main.tex}
+
+\include{clash/main.tex}
 
 \include{campaigns/main.tex}
 
