Update existing scenario and coop template

--- a/templates/cooperative.tex
+++ b/templates/cooperative.tex
@@ -7,8 +7,6 @@
 
 \textbf{Source:} ...
 
-\subsection*{\MakeUppercase{The Story}}
-
 \textit{... 1-2 two paragraphs to set the story ...}
 
 \subsection*{\MakeUppercase{Scenario Length}}
@@ -19,9 +17,11 @@ This scenario is played over ... rounds.
 
 \textbf{Player count:} ...
 
-\textbf{Starting Resources:} \svg{gold} \svg{building_materials} \svg{valuables}
+\textbf{Starting Resources:}\par
+{\centering\hfill \textbf{X ×} \svg{gold} \hfill \textbf{Y ×} \svg{building_materials} \hfill \textbf{Z ×} \svg{valuables}\hfill}
 
-\textbf{Starting Income:} \svg{gold} \svg{building_materials} \svg{valuables}
+\textbf{Starting Income:}\par
+{\centering\hfill\textbf{``X''} \svg{gold} \hfill \textbf{``Y''} \svg{building_materials} \hfill \textbf{``Z''} \svg{valuables}\hfill}
 
 \textbf{Starting Units:}
 \begin{itemize}
@@ -54,17 +54,11 @@ Take the following Map tiles and set them up as shown in the scenario map layout
 
 \textbf{Z × Near Map tile (IV-V)}
 
-\subsection*{\MakeUppercase{Win/lose conditions}}
+\subsection*{\MakeUppercase{Victory Conditions}}
+...
 
-\textbf{Win:}
-\begin{itemize}
-    \item ...
-\end{itemize}
-
-\textbf{Lose:}
-\begin{itemize}
-    \item ...
-\end{itemize}
+\subsection*{\MakeUppercase{Defeat Conditions}}
+...
 
 \subsection*{\MakeUppercase{Timed events}}
 
@@ -72,10 +66,6 @@ Take the following Map tiles and set them up as shown in the scenario map layout
 \begin{itemize}
     \item ...
 \end{itemize}
-
-\end{multicols*}
-
-\newpage
 
 \begin{multicols*}{2}
 
