--- a/coops/sentinels.tex
+++ b/coops/sentinels.tex
@@ -7,8 +7,6 @@
 
 \textbf{Source:} \href{https://discord.com/channels/740870068178649108/1233112440322002964/1233112440322002964}{Archon Studio Discord}
 
-\subsection*{\MakeUppercase{The Story}}
-
 \textit{There is a world beyond this world, and it is filled with beasts and monsters, barely held captive by a formation of four sacred Obelisks.
   But the protection of the stones is weakening, and a breach is imminent.
   When it happens, only you and your ally stand between the hordes and the total devastation of these lands.
@@ -22,9 +20,11 @@ This scenario is played over 12 rounds.
 
 \textbf{Player Count:} 2
 
-\textbf{Starting Resources:} 10 \svg{gold}, 2 \svg{building_materials}, 1 \svg{valuables}
+\textbf{Starting Resources:}\par
+{\centering\hfill \textbf{10 ×} \svg{gold} \hfill \textbf{2 ×} \svg{building_materials} \hfill \textbf{1 ×} \svg{valuables}\hfill}
 
-\textbf{Starting Income:} 10 \svg{gold}, 2 \svg{building_materials}, 1 \svg{valuables}
+\textbf{Starting Income:}\par
+{\centering\hfill\textbf{``10''} \svg{gold} \hfill \textbf{``2''} \svg{building_materials} \hfill \textbf{``1''} \svg{valuables}\hfill}
 
 \textbf{Starting Units:}
 \begin{itemize}
@@ -63,19 +63,15 @@ Take the following Map Tiles and set them up as shown in the scenario map layout
     The winning player rolls two Treasure Dice and resolves one of them.
 \end{itemize}
 
-\subsection*{\MakeUppercase{Win/lose conditions}}
+\subsection*{\MakeUppercase{Victory Conditions}}
 
-\textbf{Win:}
-\begin{itemize}
-  \item Defeat all invading armies.
-\end{itemize}
+Defeat all invading armies.
 
-\textbf{Lose:}
-\begin{itemize}
-  \item There is an undefeated enemy army left at the end of Round 12.
-  \item One of your towns is captured or a main hero is defeated in battle
-  (retreat doesn't count).
-\end{itemize}
+\subsection*{\MakeUppercase{Defeat Conditions}}
+
+There is an undefeated enemy army left at the end of Round 12.
+
+One of your towns is captured or a main hero is defeated in battle (retreat doesn't count).
 
 \subsection*{\MakeUppercase{Timed Events}}
 
@@ -88,12 +84,6 @@ Take the following Map Tiles and set them up as shown in the scenario map layout
 \begin{itemize}
   \item Spawn an enemy army according to the rules below.
 \end{itemize}
-
-\end{multicols*}
-
-\newpage
-
-\begin{multicols*}{2}
 
 \subsection*{\MakeUppercase{Enemy Spawning\\and Movement}}
 
