--- a/coops/sentinels.tex
+++ b/coops/sentinels.tex
@@ -7,8 +7,6 @@
 
 \textbf{Source:} \href{https://discord.com/channels/740870068178649108/1233112440322002964/1233112440322002964}{Archon Studio Discord}
 
-\subsection*{\MakeUppercase{The Story}}
-
 \textit{There is a world beyond this world, and it is filled with beasts and monsters, barely held captive by a formation of four sacred Obelisks.
   But the protection of the stones is weakening, and a breach is imminent.
   When it happens, only you and your ally stand between the hordes and the total devastation of these lands.
@@ -22,9 +20,11 @@ This scenario is played over 12 rounds.
 
 \textbf{Player Count:} 2
 
-\textbf{Starting Resources:} 10 \svg{gold}, 2 \svg{building_materials}, 1 \svg{valuables}
+\textbf{Starting Resources:}\par
+{\centering\hfill \textbf{10 ×} \svg{gold} \hfill \textbf{2 ×} \svg{building_materials} \hfill \textbf{1 ×} \svg{valuables}\hfill}
 
-\textbf{Starting Income:} 10 \svg{gold}, 2 \svg{building_materials}, 1 \svg{valuables}
+\textbf{Starting Income:}\par
+{\centering\hfill\textbf{``10''} \svg{gold} \hfill \textbf{``2''} \svg{building_materials} \hfill \textbf{``1''} \svg{valuables}\hfill}
 
 \textbf{Starting Units:}
 \begin{itemize}
@@ -63,19 +63,15 @@ Take the following Map Tiles and set them up as shown in the scenario map layout
     The winning player rolls two Treasure Dice and resolves one of them.
 \end{itemize}
 
-\subsection*{\MakeUppercase{Win/lose conditions}}
+\subsection*{\MakeUppercase{Victory Conditions}}
 
-\textbf{Win:}
-\begin{itemize}
-  \item Defeat all invading armies.
-\end{itemize}
+Defeat all invading armies.
 
-\textbf{Lose:}
-\begin{itemize}
-  \item There is an undefeated enemy army left at the end of Round 12.
-  \item One of your towns is captured or a main hero is defeated in battle 
-  (retreat doesn't count).
-\end{itemize}
+\subsection*{\MakeUppercase{Defeat Conditions}}
+
+There is an undefeated enemy army left at the end of Round 12.
+
+One of your towns is captured or a main hero is defeated in battle (retreat doesn't count).
 
 \subsection*{\MakeUppercase{Timed Events}}
 
@@ -89,11 +85,7 @@ Take the following Map Tiles and set them up as shown in the scenario map layout
   \item Spawn an enemy army according to the rules below.
 \end{itemize}
 
-\end{multicols*}
-
-\newpage
-
-\subsection*{\MakeUppercase{Enemy Spawning and Movement}}
+\subsection*{\MakeUppercase{Enemy Spawning\\and Movement}}
 
 \begin{itemize}
   \item Enemy armies spawn on a random Obelisk field (use hero miniatures of factions not in play).
@@ -114,7 +106,7 @@ Take the following Map Tiles and set them up as shown in the scenario map layout
 \end{itemize}
 
 
-\subsection*{\MakeUppercase{Combat with Enemy Armies}}
+\subsection*{\MakeUppercase{Combat with\\Enemy Armies}}
 
 \begin{itemize}
   \item During a battle with an enemy army, a hero can retreat every time a friendly unit is about to activate.
@@ -132,6 +124,8 @@ Take the following Map Tiles and set them up as shown in the scenario map layout
   \item When a player retreats, the enemy army draws up to the ``minimum'' of 4 units and takes these as starting units to the next fight.
 \end{itemize}
 
+\end{multicols*}
+
 \hommtable[]{18}{
   \centering
   \medskip
@@ -144,25 +138,25 @@ Take the following Map Tiles and set them up as shown in the scenario map layout
   \newcommand{\azure}[0]{\svg[12]{azure}}
 
   \begin{tabularx}{\linewidth}{p{0.15\linewidth}XXXX} & \darkcell{Rounds 6 + 7} & \darkcell{Rounds 8 + 9} & \darkcell{Round 10}\\
-  \darkcell[1.4]{Easy} 
-    & \lightcell[1.4]{\bronze \silver \silver \silver \golden} 
-    & \lightcell[1.4]{\silver \silver \silver \golden \golden} 
-    & \lightcell[1.4]{\silver \silver \golden \azure \footref{azure} \linebreak 
+  \darkcell[1.4]{Easy}
+    & \lightcell[1.4]{\bronze \silver \silver \silver \golden}
+    & \lightcell[1.4]{\silver \silver \silver \golden \golden}
+    & \lightcell[1.4]{\silver \silver \golden \azure \footref{azure} \linebreak
       (2\bronze, 4\silver, 3\golden, 1\azure)}\\
-  \darkcell[1.4]{Normal} 
-    & \lightcell[1.4]{\silver \silver \silver \golden \golden} 
-    & \lightcell[1.4]{\silver \silver \silver \golden \azure} 
-    & \lightcell[1.4]{\golden \golden \golden \azure \footref{azure} \linebreak 
+  \darkcell[1.4]{Normal}
+    & \lightcell[1.4]{\silver \silver \silver \golden \golden}
+    & \lightcell[1.4]{\silver \silver \silver \golden \azure}
+    & \lightcell[1.4]{\golden \golden \golden \azure \footref{azure} \linebreak
       (2\silver, 7\golden, 1\azure)}\\
-  \darkcell[1.4]{Hard} 
-    & \lightcell[1.4]{\silver \silver \golden \golden \golden} 
+  \darkcell[1.4]{Hard}
+    & \lightcell[1.4]{\silver \silver \golden \golden \golden}
     & \lightcell[1.4]{\silver \silver \golden \golden \azure}
-    & \lightcell[1.4]{\golden \golden \azure \azure \footref{azure} \linebreak 
+    & \lightcell[1.4]{\golden \golden \azure \azure \footref{azure} \linebreak
       (2\silver, 6\golden, 2\azure)}\\
-  \darkcell[1.4]{Impossible} 
-    & \lightcell[1.4]{\silver \golden \golden \golden \golden} 
-    & \lightcell[1.4]{\golden \golden \golden \golden \azure} 
-    & \lightcell[1.4]{\golden \azure \azure \azure \footref{azure} \linebreak 
+  \darkcell[1.4]{Impossible}
+    & \lightcell[1.4]{\silver \golden \golden \golden \golden}
+    & \lightcell[1.4]{\golden \golden \golden \golden \azure}
+    & \lightcell[1.4]{\golden \azure \azure \azure \footref{azure} \linebreak
       (7\golden, 3\azure)}\\
   \end{tabularx}
 }
