--- a/coops/sentinels.tex
+++ b/coops/sentinels.tex
@@ -27,8 +27,10 @@ This scenario is played over 12 rounds.
 {\centering\hfill\textbf{``10''} \svg{gold} \hfill \textbf{``2''} \svg{building_materials} \hfill \textbf{``1''} \svg{valuables}\hfill}
 
 \textbf{Starting Units:}
-- A pack of \svg{bronze} units with the \textit{lowest} recruitment cost.
-- A few \svg{bronze} units with the \textit{highest} recruitment cost.
+\begin{itemize}
+  \item A Pack of \svg{bronze} units with the \textit{lowest} recruitment cost.
+  \item A Few \svg{bronze} units with the \textit{highest} recruitment cost.
+\end{itemize}
 
 \textbf{Town Buildings:} \svg{bronze} Dwelling, Citadel
 
@@ -38,7 +40,7 @@ This scenario is played over 12 rounds.
 
 \subsection*{\MakeUppercase{Map Setup}}
 
-Take the following map tiles and set them up as shown in the scenario map layout:
+Take the following Map Tiles and set them up as shown in the scenario map layout:
 
 \textbf{2 × Starting Map Tile (I)}
 \begin{itemize}
@@ -119,7 +121,7 @@ One of your towns is captured or a main hero is defeated in battle (retreat does
   \item On Round 10, a Boss Army spawns and is different from previous armies because it gets reinforced from a fixed pool of neutral units (reinforcement pool = number in brackets in the table below).
   \item At the beginning of the 2$^{nd}$ combat round and every following round, 2 units reinforce the remaining army from the shuffled reinforcement pool (up to the maximum of 5 units) to continue the fight until either the player retreats or every neutral unit from the reinforcement pool is killed. \textit{If the number of enemy units at the beginning of a round is 1 or lower, draw up to a total of 4 units (i.e., there are always 4 or 5 enemy units on the board after reinforcing, if available).}
   \item Place the reinforcing units on the enemy base line starting from the left with the lowest initiative (\svg{unit_ranged} units first). If necessary, continue on the next line (in the same order).
-  \item When a player retreats, the enemy army draws up to the "minimum" of 4 units and takes these as starting units to the next fight.
+  \item When a player retreats, the enemy army draws up to the ``minimum'' of 4 units and takes these as starting units to the next fight.
 \end{itemize}
 
 \end{multicols*}
