Bloody Grail - Scenario (#15)
Co-authored-by: Andrzej Wiącek <andrzej.wiacek@qwrtln.nl>
Co-authored-by: qwrtln <qwrtln@users.noreply.github.com>

--- a/metadata.tex
+++ b/metadata.tex
@@ -116,6 +116,7 @@
 \definecolor{cadmiumgreen}{rgb}{0.0, 0.42, 0.24}
 \definecolor{darkcandyapplered}{rgb}{0.64, 0.0, 0.0}
 \definecolor{goldenbrown}{rgb}{0.6, 0.4, 0.08}
+\definecolor{darkcerulean}{rgb}{0.03, 0.27, 0.49}
 \definecolor{camel}{rgb}{0.76, 0.6, 0.42}
 
 % Command to frame images
@@ -428,6 +429,8 @@
 \clearpage
 
 \include{coops/main.tex}
+
+\include{clash/main.tex}
 
 \include{campaigns/main.tex}
 
