--- a/coops/titans_stronghold.tex
+++ b/coops/titans_stronghold.tex
@@ -83,7 +83,7 @@ The center of this tile is the Titans' Stronghold.
     \item Ignore all yellow borders in tiles I.
     \item You can use your build token to give your resources to another player.
     \item Two players can use their build tokens to exchange artifacts and/or spells.
-    \item Whenever a player visits an Obelisk, that player rolls one treasure die and one resource die, chooses one of the dice, and resolves its outcome.
+    \item Whenever a player visits an Obelisk, that player rolls one treasure die and one resource die, and resolves one of them.
     \item When all VII fields (not including the Titans' Stronghold) are flagged, randomly draw and shuffle the following (see the next page) number of Neutral Unit cards from each of their corresponding decks to create a separate deck of Neutral Units for the Titans' Stronghold (the deck of Titans' Stronghold is sometimes cut in two because otherwise certain scenarios are impossible to implement with the cards from certain expansions).
     \item Any time a Hero enters the Titans' Stronghold, they draw 5 cards from the Titans' Stronghold deck instead of drawing them from the Neutral Unit card decks. The units are placed on the Combat board (see page 29, “Neutral Unit Setup” in the Core Rulebook). Players attempt to defeat the units they find at the Titans' Stronghold. Any Neutral Units defeated during Combat in the Titans' Stronghold are returned to their respective Neutral Unit decks instead of the Titans' Stronghold deck. Any Neutral Units surviving Combat at the Titans' Stronghold are shuffled back into the Titans' Stronghold deck. If there are not enough Unit cards in this deck, draw as many Unit cards as there are and place them on the Combat board.
     \item Combat in the Titans' Stronghold now costs 1 MP to extend per Combat round, just like Combat against non-Azure tier units.
