--- a/coops/titans_stronghold.tex
+++ b/coops/titans_stronghold.tex
@@ -94,6 +94,8 @@ The center of this tile is the Titans' Stronghold.
     \end{itemize}
 \end{itemize}
 
+\end{multicols*}
+
 \newpage
 
 \hommtable[]{28}{
